--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .animation-delay-200 {
+    animation-delay: 0.2s;
+  }
+  .animation-delay-400 {
+    animation-delay: 0.4s;
+  }
+}
+
+.circle {
+  @apply w-4 h-4 my-12 mx-1 bg-gray-500 rounded-full;
+}
+
 input {
   @apply border;
   @apply border-solid;
@@ -23,4 +36,28 @@ input {
   width: 100%;
   aspect-ratio: 1 / 1;
   position: relative;
+}
+
+.group {
+  transition: transform 0.3s;
+}
+
+.group:hover .opacity-100 {
+  transform: translateY(0);
+}
+
+@media (min-width: 400px) {
+  .background-gradient::before {
+    background: radial-gradient(
+      20% 50% at 50% 50%,
+      rgba(71, 127, 247, 0.376) 0%,
+      rgba(37, 38, 44, 0) 100%
+    );
+    z-index: -10;
+    content: "";
+    position: absolute;
+    inset: 0px;
+    transform: scale(1);
+    pointer-events: none;
+  }
 }
